--- a/ng2-input-validator-demo/src/app/app.component.html
+++ b/ng2-input-validator-demo/src/app/app.component.html
@@ -1,4 +1,23 @@
-<div>
-  <div>Example 1:</div>
-  <ng2ivd-form1></ng2ivd-form1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/form1" routerLinkActive="active">Form 1</a>
+      </li>
+    </ul>
+  </div>
+  <div>
+    <button type="button" (click)="onLangChange()" class="btn btn-default">{{ currentLang }}</button>
+  </div>
+</nav>
+<div class="container py-3">
+  <div class="row">
+    <div class="col-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
