--- a/ng2-input-validator-demo/src/app/form1/form1.component.html
+++ b/ng2-input-validator-demo/src/app/form1/form1.component.html
@@ -1,4 +1,10 @@
 <h2>Example Form 1</h2>
+<div class="alert alert-warning" role="alert" *ngIf="form.touched && form.invalid">
+  Form is invalid
+</div>
+<div class="alert alert-success" role="alert" *ngIf="form.touched && form.valid">
+  Form is valid. Form data: {{ form.value | json }}
+</div>
 
 <form [formGroup]="form.formGroup">
   <div class="form-group row">
@@ -16,7 +22,7 @@
     </div>
   </div>
   <div class="form-group row">
-    <label for="model" class="col-sm-2 col-form-label">Motor</label>
+    <label for="motor" class="col-sm-2 col-form-label">Motor</label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="motor" placeholder="Motor" formControlName="motor">
       <ng2iv-validator [control]="form.getByPath('motor')"></ng2iv-validator>
