--- a/projects/demo/src/app/form1/form1.component.html
+++ b/projects/demo/src/app/form1/form1.component.html
@@ -1,115 +1,3 @@
-# ng2-input-validator
-
-This is the Reactive Form wrapper to Angular 6 FormGroup (https://angular.io/api/forms/FormGroup) with support validation message.
-
-![Example usage](https://user-images.githubusercontent.com/3649077/45872579-aa9a9d80-bd90-11e8-905f-9ff790dc66c2.gif)
-
-# Installation
-
-Install the ng2-input-validator module and add it to dependencies in package.json:
-
-```
-npm i ng2-input-validator
-```
-
-import Ng2InputValidatorModule and ReactiveFormsModule in app.module.ts:
-
-```
-@NgModule({
-  declarations: ...,
-  imports: [BrowserModule, ReactiveFormsModule, Ng2InputValidatorModule],
-  providers: ...,
-  bootstrap: ...
-})
-export class AppModule {}
-```
-
-# Usage
-
-component
-
-```
-import { Component, OnInit } from '@angular/core';
-import { Validators, FormGroup, FormArray } from '@angular/forms';
-
-import { TranslateService } from '@ngx-translate/core';
-import { Ng2Form } from 'projects/ng2-input-validator/src/lib/ng2-form';
-import { TagValidator } from './tag-validator';
-
-@Component({
-  selector: 'ng2ivd-form1',
-  templateUrl: './form1.component.html',
-  styleUrls: ['./form1.component.scss'],
-  providers: [Ng2Form]
-})
-export class Form1Component implements OnInit {
-  constructor(
-    public form: Ng2Form,
-    private translateService: TranslateService
-  ) {}
-
-  ngOnInit() {
-    this.buildForm();
-
-    this.initTranslations();
-    this.translateService.onLangChange.subscribe(() => this.initTranslations());
-  }
-
-  addTag(): void {
-    this.tags.push(this.buildTagsForm());
-  }
-
-  onSubmit() {
-    this.form.validate();
-
-    if (this.form.valid) {
-    }
-  }
-
-  private buildForm() {
-    this.form.group({
-      mark: [null, Validators.required],
-      model: [null, Validators.required],
-      motor: [null, Validators.required],
-      tags: this.form.array(
-        [this.buildTagsForm('text tag'), this.buildTagsForm(null)],
-        [Validators.required, TagValidator.unique]
-      )
-    });
-  }
-
-  buildTagsForm(text: string = null): FormGroup {
-    return this.form.groupFormBuilder({
-      text: [text, Validators.required]
-    });
-  }
-
-  get tags(): FormArray {
-    return <FormArray>this.form.getByPath('tags');
-  }
-
-  removeTag(i: number): void {
-    this.tags.removeAt(i);
-  }
-
-  private initTranslations() {
-    this.translateService
-      .get(['FORM1.tags_required', 'FORM1.tags_unique'])
-      .subscribe((translations) => {
-        this.form.setValidationMessages({
-          tags: {
-            required: translations['FORM1.tags_required'],
-            uniqueTags: translations['FORM1.tags_unique']
-          }
-        });
-      });
-  }
-}
-```
-
-HTML
-
-```
 <h2>Example Form 1</h2>
 <div class="alert alert-warning" role="alert" *ngIf="form.touched && form.invalid">
   {{'COMMON.FormIsInvalid' | translate }}
@@ -153,7 +41,7 @@ HTML
                 <ng2iv-validator [control]="tag.get('text')"></ng2iv-validator>
               </div>
               <div class="p-2 flex-shrink-1 bd-highlight">
-                <span (click)="removeTag(i)">
+                <span (click)="removeTag(i)">X
                 </span>
               </div>
             </div>
@@ -169,4 +57,3 @@ HTML
     </div>
   </div>
 </form>
-```
